--- a/Famille.html
+++ b/Famille.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <h1>On ne connait pas sa véritable famille car il est originaire du Soudan</h1>
-    <style></style> h4{
-        color: blue;
-    }</style>
+    <style>h1{
+        color: rgb(182, 182, 216);
+    }
+    body{
+        background-color: yellow;
+    }
+    </style> 
    
     
 </body>
