--- a/Pouvoit.html
+++ b/Pouvoit.html
@@ -20,7 +20,7 @@ Sa statuette est posé sous les lits des égypyiens car il croient que bès chas
          h4{
             color: blue;
         }
-        body{background-color: red;}
+        body{background-color: lightblue;}
     </style>
     
 </body>
